Optimized JAVA_OPTS